tests/ui/opt_vec_nonpositional.stderr
error: proc-macro derive panicked
  --> $DIR/opt_vec_nonpositional.rs:13:10
   |
13 | #[derive(Clap, Debug)]
   |          ^^^^
   |
   = help: message: Option<Vec<T>> type is meaningless for positional argument
